fix(loading button): alignment

--- a/src/styles/components/comments/_comments.scss
+++ b/src/styles/components/comments/_comments.scss
@@ -9,6 +9,7 @@
     align-items: center;
     gap: 10px;
     align-self: center;
+    margin: 100px auto 0;
   }
 
   &__loading-icon {
